# tickets-ui

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
sentinel/: tickets-ui.template.toml
ui/: Cargo.toml  manifest.toml
ui/src/: lib.rs
ui/static/: style.css
