[package]
name = "tickets-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "tickets_ui"
crate-type = ["cdylib"]

[dependencies]
packr-guest = { version = "0.8.1", features = ["derive", "pic"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
